--- a/.classpath
+++ b/.classpath
@@ -14,7 +14,6 @@
 	<classpathentry kind="lib" path="lib/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="lib/testng-6.14.3.jar" sourcepath="C:/Users/admin/AppData/Local/Temp/.org.sf.feeling.decompiler1652558546868/source/testng-6.14.3-sources.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/commons-codec-1.13.jar"/>
-	<classpathentry kind="lib" path="libWebDriverManager/commons-collections4-4.3.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/commons-compress-1.20.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/commons-io-2.7.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/commons-lang3-3.11.jar"/>
@@ -25,5 +24,19 @@
 	<classpathentry kind="lib" path="libWebDriverManager/jsoup-1.13.1.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/slf4j-api-1.7.30.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.2.0.jar"/>
+	<classpathentry kind="lib" path="libLog4j/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="libLog4j/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/commons-collections4-4.3.jar"/>
+	<classpathentry kind="lib" path="libReportNG/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="libReportNG/guice-3.0.jar"/>
+	<classpathentry kind="lib" path="libReportNG/reportng-1.1.4.jar"/>
+	<classpathentry kind="lib" path="libReportNG/velocity-1.4.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/bson-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/extentreports-2.41.2.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/jsoup-1.8.3.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/mongodb-driver-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/mongodb-driver-core-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/sqlite-jdbc-3.8.11.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
